# redline

./: .copilotignore  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  batch2_results.json  batch3_results.json  cspell.json  docker-compose.yml  extraction_prompt.txt  extraction_prompt_refined.txt  mkdocs.yml  prek.toml  pyproject.toml  scan.ps1  scan.sh  skills-lock.json  temp_inspect.py  test-claude-review.md  test_refined_prompt.py
.agents/tools/: _standup_fetch.py  standup_fetch.py
.claude/: settings.json
.claude/agents/: brent.md  graeme.md  harriet.md  john.md  kabilan.md  linda.md  mark.md  matt.md  peter.md  ron.md
.claude/commands/: agile-backlog-grooming.md  agile-sprint-planning.md  evaluation-workflow.md  git-push-batched.md  make-pr.md  monthly-editorial-session.md  perform-code-review.md  resolve-pr-issues.md  session-retro.md  spec-kit-implement.md  spec-kit.md  sprint-planning.md  standup.md
.claude/hooks/: cce-health-gate.ps1  cce-inject.ps1  cce-route-explore.ps1  gh-graphql-guard.ps1  handover.json  prek-kabilan-check.ps1  strip-future-annotations.ps1
.claude/rules/: rtk-vendor-skills.md
.config/: secrets.baseline
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: mark.agent.md  rl.graeme.agent.md  rl.harriet.agent.md  rl.john.agent.md  rl.kabilan.agent.md  rl.linda.agent.md  rl.mark.agent.md  rl.matt.agent.md  rl.peter.agent.md  rl.ron.agent.md  ron.agent.md  speckit.critique.run.agent.md  speckit.implement.agent.md  speckit.plan-review-gate.check.agent.md  speckit.red-team.gate.agent.md  speckit.red-team.run.agent.md  speckit.shaping-gate.check.agent.md  speckit.source-reconciliation.run.agent.md  speckit.static-checks.run.agent.md  speckit.taskstoissues.agent.md  speckit.verification-gate.run.agent.md  speckit.version-guard.check.agent.md  speckit.version-guard.load.agent.md  speckit.version-guard.validate.agent.md
.github/hooks/: cce-inject.ps1  cce-subagent.json
.github/instructions/: mental-models-protocol.instructions.md  rtk.instructions.md  skills-reporting.instructions.md  visual-artifacts.instructions.md
.github/prompts/: evaluation-workflow.prompt.md  monthly-editorial-session.prompt.md  speckit.critique.run.prompt.md  speckit.plan-review-gate.check.prompt.md  speckit.red-team.gate.prompt.md  speckit.red-team.run.prompt.md  speckit.shaping-gate.check.prompt.md  speckit.source-reconciliation.run.prompt.md  speckit.spike-trivial-hook.noop.prompt.md  speckit.static-checks.run.prompt.md  speckit.verification-gate.run.prompt.md  speckit.version-guard.check.prompt.md  speckit.version-guard.load.prompt.md  speckit.version-guard.validate.prompt.md
.github/scripts/: enforce_board.py
.github/workflows/: board-enforcement.yml  board-pr-to-review.yml  ci.yml  claude-review.yml  copilot-setup-steps.yml  spec-archive.yml  static-checks.yml  tests.yml  topology-sync.yml
.specify/: architecture.yml  extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
config/: dev-endpoints.json
deploy/: README.md
deploy/firebase/: firebase.json
deploy/infra/: README.md
deploy/modules/: README.md
docs/: functions.txt  migration-claude-code-audit.md  module-tree.txt  skills-directory.txt
docs/adr/: ADR-017-interface-volatility-by-default.md  adr-001-docx-generation-engine-facade.md  adr-001-single-source-of-truth.md  adr-002-data-driven-report-definitions.md  adr-002-docx-generation-engine-facade.md  adr-003-data-driven-report-definitions.md  adr-003-facade-primitives-only-boundary.md  adr-004-facade-primitives-only-boundary.md  adr-004-styles-only-template-strategy.md  adr-005-standards-knowledge-store-citation-only-internal-architecture.md  adr-005-styles-only-template-strategy.md  adr-006-shared-taxonomy-skeleton-checklist-prereview.md  adr-006-standards-knowledge-store-citation-only-internal-architecture.md  adr-007-shared-taxonomy-skeleton-checklist-prereview.md  adr-007-standards-registry-determinism.md  adr-008-skill-taxonomy-and-governance-registry.md  adr-008-standards-registry-determinism.md  adr-009-dependency-inversion-principle-for-skills-agents-boundary.md  adr-009-skill-taxonomy-and-governance-registry.md  adr-010-dependency-inversion-principle-for-skills-agents-boundary.md  adr-011-hook-first-enforcement.md  adr-template.md  (+15 more)
hooks/: check-adr-constitution-sync.py  check-banned-words.py  check-deferred-overdue.py  check-extension-residue.py  check-hook-adr-reference.py  check-mental-model-links.py  check-mermaid-syntax.py  check-no-archive-imports.py  check-no-argparse.py  check-no-dataclass-in-domain.py  check-no-debug-statements.py  check-no-emoji.py  check-no-env-defaults.py  check-no-env-loader.py  check-no-functions-in-init.py  check-no-section-rules.py  check-no-user-paths.py  check-orphan-skills.py  check-py-file-location.py  check-pydantic-field-metadata.py  check-replacement-char.py  check-rtk-in-docs.py  check-script-encoding.py  check-skill-dag.py  check-skill-has-red-phase.py  check-skill-routing-redundancy.py  check-skills-documented.py  check_overused_underscore.py  clean-quarto-artifacts.py  clean-quarto-intermediates.py  export-functions.py  export-module-tree.py  export-skills-directory.py  fix-doc-sync.py  session-start-anchor.ps1  session-stop-handover.ps1  session-track-writes.ps1  sync-layer-to-lock.py
infra/: README.md
scripts/: audit_rtk_cce.py  audit_skill_compliance.py  extract_oversized_skills.py
specs/: 2026-04-11-spec-kit-skill-design.md  sprint-1-tasks.md
tasks/: Optimize-ClaudeRAM.ps1  run-app.ps1  setup-cce.ps1  setup-gpu-embedding.ps1  setup-speckit.ps1  setup-superpowers.ps1  setup.ps1  update-cli.ps1
tests/: conftest.py  test_cce_integration.py  test_check_deferred_overdue.py  test_check_mermaid_syntax.py  test_custom_agent_frontmatter.py  test_extraction_prompt_format.py  test_merge_chapters.py  test_skill_quality.py  test_smoke.py
(+1019 files in other folders)
