[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "redline"
version = "0.1.0"
description = """\
  Redline is an automated quality gate that prevents costly project write-offs by giving small and medium-sized \
  engineering firms the rigorous, enterprise-grade commercial risk mitigation of a top-tier global consultancy\
  """
readme = "README.md"
keywords = [ "python" ]
authors = [
  { name = "Harel Lustiger", email = "harel.lustiger@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
urls.Documentation = "https://github.com/harell/redline"
urls.Repository = "https://github.com/harell/redline"

[dependency-groups]
dev = [
  "codespell>=2.4.2",
  "deptry>=0.25.1",
  "import-linter>=2.11",
  "pre-commit>=4.2.0",
  "pre-commit-update>=0.8.0",
  "prek>=0.3.8",
  "pyproject-fmt>=2.21.0",
  "ruff>=0.15.8",
]
test = [
  "coverage[toml]>=7.13.5",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
]
doc = [
  "mkdocs>=1.6.1",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/rl" ]

[tool.uv]
default-groups = [ "doc", "dev", "test" ]
link-mode = "symlink"

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "A", "C4", "E4", "E7", "E9", "F", "FLY", "FURB", "I", "INP", "PLE", "PLR", "PT", "RUF", "SIM", "UP" ]
lint.ignore = [ "PLR2004", "SIM108" ]
lint.per-file-ignores."!tests/**/*.py" = [ "PT" ]
lint.per-file-ignores.".agents/tools/**" = [ "INP" ]
lint.per-file-ignores."hooks/**" = [ "INP" ]
lint.per-file-ignores."src/scripts/**" = [ "INP" ]
lint.per-file-ignores."tests/**" = [ "INP" ]

[tool.codespell]
ignore-regex = [ "[A-Za-z0-9+/]{100,}" ]
ignore-words-list = [ "aci", "ags", "bund", "bunds", "gir", "linz", "sme", "te" ]

[tool.deptry]
ignore_notebooks = false

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = [ "--import-mode=importlib", "-ra", "--strict-markers", "--strict-config" ]
ini_options.filterwarnings = [ "error" ]
ini_options.xfail_strict = true
ini_options.log_cli_level = "INFO"
ini_options.minversion = "7"

[tool.coverage]
run.relative_files = true
run.source = [ "src" ]
report.exclude_also = [
  "@(abc\\.)?abstractmethod",
  "assert_never(.*)",
  "class .*\\bProtocol\\):",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.omit = [ "*/pytest-of-*/*" ]

[tool.importlinter]
root_packages = [ "rl" ]

[[tool.importlinter.contracts]]
name = "rl layers"
type = "layers"
layers = [ "functions", "schemas", "domain" ]
containers = [ "rl" ]
exhaustive = true

[[tool.importlinter.contracts]]
name = "rl.functions layers"
type = "layers"
layers = [ "readers" ]
containers = [ "rl.functions" ]
exhaustive = true

[[tool.importlinter.contracts]]
name = "rl.functions.readers layers"
type = "layers"
layers = [ "retaining_wall" ]
containers = [ "rl.functions.readers" ]
exhaustive = true
