[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "redline"
version = "0.1.0"
description = """\
  Redline is an automated quality gate that prevents costly project write-offs by giving small and medium-sized \
  engineering firms the rigorous, enterprise-grade commercial risk mitigation of a top-tier global consultancy\
  """
readme = "README.md"
keywords = [ "python" ]
authors = [
  { name = "Harel Lustiger", email = "harel.lustiger@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pydantic>=2.13.4",
  "python-docx>=1.2.0",
]
urls.Documentation = "https://github.com/harell/redline"
urls.Repository = "https://github.com/harell/redline"

[dependency-groups]
dev = [
  "codespell>=2.4.2",
  "deptry>=0.25.1",
  "import-linter>=2.11",
  "openpyxl>=3.1.5",
  "pre-commit>=4.2.0",
  "pre-commit-update>=0.8.0",
  "prek>=0.3.8",
  "pydantic>=2.13.3",
  "pydoclint>=0.8.6",
  "pypdf>=6.10.2",
  "pyproject-fmt>=2.21.0",
  "ruff>=0.15.8",
]
test = [
  "coverage[toml]>=7.13.5",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]
doc = [
  "mkdocs>=1.6.1",
]
ocr = [
  "easyocr>=1.7.2",
  "numpy>=2.4.4",
  "pypdfium2>=5.7.1",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/marker", "src/rl" ]

[tool.uv]
default-groups = [ "doc", "dev", "test" ]
constraint-dependencies = [
  "gitpython>=3.1.50",
]
link-mode = "symlink"

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [
  "A",
  "C4",
  "D",
  "E4",
  "E7",
  "E9",
  "F",
  "FLY",
  "FURB",
  "I",
  "INP",
  "PLE",
  "PLR",
  "PT",
  "RUF",
  "SIM",
  "TID",
  "UP"
]
lint.ignore = [ "D105", "D107", "D417", "PLR2004", "SIM108" ]
lint.per-file-ignores."!tests/**/*.py" = [ "PT" ]
lint.per-file-ignores."!tests/**/{domain,schemas}/**/test_*.py" = [ "TID251" ]
lint.per-file-ignores.".agents/tools/**" = [ "INP" ]
lint.per-file-ignores.".github/scripts/**" = [ "INP" ]
lint.per-file-ignores."hooks/**" = [ "INP" ]
lint.per-file-ignores."src/scripts/**" = [ "INP" ]
lint.per-file-ignores."tests/**" = [ "D", "INP", "SIM117" ]
lint.flake8-tidy-imports.banned-api."pydantic.ValidationError".msg = """\
  Do not import ValidationError in domain/schema tests. Pydantic validation is tested by Pydantic's own suite. Test \
  application behaviour through function calls instead.\
  """
lint.pydocstyle.convention = "google"

[tool.codespell]
ignore-regex = [ "[A-Za-z0-9+/]{100,}" ]
ignore-words-list = [
  "aci",
  "ags",
  "als",
  "bund",
  "bunds",
  "constructure",
  "gage",
  "gir",
  "linz",
  "lod",
  "nd",
  "skelton",
  "sme",
  "strat",
  "te"
]
skip = [ "tests/assets/html/*.html" ]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false
skip-checking-short-docstrings = true
exclude = "\\.git|\\.tox|tests"

[tool.deptry]
ignore_notebooks = false
per_rule_ignores.DEP002 = [ "python-docx" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ ".agents/tools" ]
ini_options.norecursedirs = [ ".git", ".venv", "__pycache__", "node_modules", "dist", "build" ]
ini_options.addopts = [ "--import-mode=importlib", "-ra", "--strict-markers", "--strict-config" ]
ini_options.filterwarnings = [ "error" ]
ini_options.xfail_strict = true
ini_options.log_cli_level = "INFO"
ini_options.minversion = "7"

[tool.coverage]
run.relative_files = true
run.source = [ "src" ]
report.exclude_also = [
  "@(abc\\.)?abstractmethod",
  "assert_never(.*)",
  "class .*\\bProtocol\\):",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.omit = [ "*/pytest-of-*/*" ]
xml.output = "coverage.xml"

[tool.usethis]
# Single source of truth for SonarQube scan properties (Phase 2, FR-021).
# `uvx usethis show sonarqube --output-file=sonar-project.properties` reads this
# table plus the SONAR_PROJECT_KEY env var and emits a transient (gitignored)
# sonar-project.properties at scan time. Do not commit the generated file.
sonarqube.exclusions = [
  "tests/**",
  "src/scripts/**",
  "**/__pycache__/**",
  "**/*.ipynb",
  "docs/**",
  ".agents/**",
  ".github/**",
  "hooks/**",
]
# Ruff findings imported as external issues when ruff-report.json is present
# (produced by scan.ps1/scan.sh). Absent report does not fail the scan.
sonarqube.extra-properties."sonar.python.ruff.reportPaths" = ".cache/sonarqube/ruff-report.json"
# Captured HTML/data fixtures under tests/assets are test ASSETS, not test code.
# They live in test scope (sonar.tests=./tests), so sonar.exclusions (main scope)
# does not filter them — their embedded third-party JS raised 27 issues we do not
# own. sonar.test.exclusions removes them from test analysis at the root.
sonarqube.extra-properties."sonar.test.exclusions" = "tests/assets/**"

[tool.importlinter]
root_packages = [ "marker", "rl" ]

[[tool.importlinter.contracts]]
name = "rl layers"
type = "layers"
layers = [ "functions", "schemas", "domain" ]
containers = [ "rl" ]
exhaustive = true

[[tool.importlinter.contracts]]
name = "marker layers"
type = "layers"
layers = [ "functions", "domain" ]
containers = [ "marker" ]

[[tool.importlinter.contracts]]
name = "marker independence"
type = "independence"
modules = [ "marker", "rl" ]
